2004-02-06  Andras Varga

	* cgate.h: added cGate::disconnect(); revised cGate::connectTo()

	* cchannel.h: added setDelay(double), setError(double), 
	setDatarate(double) to cSimpleChannel

2004-02-04  ------ omnetpp-3.0pre1 released ------

2004-01-09  Andras Varga

	* cenvir.h: added bubble() to cEnvir

	* cenvir.h: added overloaded "<<" operator for printing object pointers
	and references (cObject*, const cObject*, cObject&, const cObject&).
	It prints the class name and the full name, like "(cMessage)hello".

2004-01-06  Andras Varga

	* cenvir.h: added isGUI()

	* display string manipulation made a lot easier: displayString() now
	returns a cDisplayString which can be changed with its own member
	functions: insertTag(), setTagArg(), removeTag(), etc.
	Example: coloring the icon: displayString().setTagArg("i",1,"cyan").
	setDisplayString() got deprecated -- there's really no need for it
	any more.

	* cGate became 8 bytes (2 pointers) smaller: notify_inspector and
	data_for_inspector members got eliminated (notification is now
	in the cDisplayString class). Same for cModule.

	* cenvir.h: new notification methods: moduleCreated(),
	moduleDeleted(), connectionCreated(), connectionRemoved(),
	displayStringChanged(cGate*), displayStringChanged(cModule*),
	displayStringAsParentChanged()

	* backwards compatibility stuff collected in compat.h

2004-01-05  Andras Varga

	* Heavy redesign of cObject and cModule internals with performance
	and memory consumption improvements and cleaner code. Summary:
	- new ownership mechanism reduces memory footprint from 20 to 8 bytes
	  per simulation object (cObject subclasses: cMessage, cGate, etc.).
	  Before it was 4 pointers (ownerp, firstchildp, nextp, prevp) plus
	  1 char (storage class) and 1 bool (tkownership), and now it's only
	  1 pointer (ownerp) plus 1 int (pos).
	- faster: change of ownership was up to 6 comparisons and 9 assignments,
  	  now it's 1 comparison, 3 assignments and 1 increment.