@@ -1,3 +1,10 @@
+2004-02-07  Andras Varga 
+
+	* ctypes.cc: added createOneIfClassIsKnown(const char *classname)
+
+	* cstruct.cc: fix createDescriptorFor() to prepare for missing 
+	descriptor object
+
 2004-02-06  Andras Varga
 
 	* cgate.cc: implemented cGate::disconnect(); revised cGate::connectTo()
